# Norph

./: Cargo.toml  README.md  README.ru.md  build.rs  config.yaml
proto/: text_embeddings.proto
src/: main.rs
src/controllers/: embedding_controller.rs  mod.rs
src/error/: service_error.rs
src/pb/: mod.rs  text_embeddings.rs
src/service/: mod.rs  text_embedded.rs
src/setting/: settings.rs
